# project-brain-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: seed_vectorstore.py
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  formatting.py  handlers.py
src/context/: __init__.py  appsignal.py  datadog.py  github.py  linear.py  mixpanel.py  notion.py
src/llm/: __init__.py  classifier.py  client.py  prompts.py
src/retrieval/: __init__.py  embeddings.py  query.py  vectorstore.py
src/sync/: __init__.py  chunking.py  scheduler.py
src/sync/sources/: __init__.py  github.py  linear.py  notion.py
src/utils/: cache.py  logging.py
tests/: __init__.py  conftest.py  test_classifier.py  test_handlers.py  test_retrieval.py
